# CPP_Analysis

./: .gitignore  CMakeLists.txt  README.md
IRAnalysis/test/: CMakeLists.txt  lit-run.py  lit.cfg.py  lit.site.cfg.py.in
IRAnalysis/test/SystemC/: process.cpp  test.cpp
IRAnalysis/test/basic_constructs/: assign.cpp  assignNameSpace.cpp  assignProcess.cpp  assignVars.cpp  loop.cpp  moduleVar.cpp  moduleVar1.cpp  simple.cpp  simpleAssign.cpp  simpleProcess.cpp  simpleProcessIf.cpp  simpleProcessVar.cpp
IRAnalysis/test/bit_vector/: FourValVector.cpp  bitVectorDecl.cpp  bitVectorUnary.cpp  bvBop.cpp  bvRange.cpp  bvShift.cpp
IRAnalysis/test/event/: event1.cpp  time1.cpp
src/: CMakeLists.txt
src/CodeGen/: CIRGenBuiltin.cpp  CIRGenCall.h  CIRGenExpr.cpp  CIRGenExprAgg.cpp  CIRGenExprConst.cpp  CIRGenFunction.cpp  CIRGenFunction.h  CIRGenFunctionInfo.h  CIRGenModule.h  CIRGenOpenMPRuntime.h  CIRGenTypeCache.h  CIRGenTypes.cpp  CIRGenVTables.h  CIRGenValue.h  CIRGenerator.cpp  CIRPasses.cpp  CIRRecordLayoutBuilder.cpp  ConstantInitFuture.h
src/Dialect/IR/: CIRDataLayout.cpp  CIRDialect.cpp  CIRTypes.cpp  FPEnv.cpp
src/Dialect/Transforms/: CIRSimplify.cpp  FlattenCFG.cpp  IdiomRecognizer.cpp  LibOpt.cpp
src/Dialect/Transforms/TargetLowering/: ABIInfo.cpp  ABIInfo.h  ABIInfoImpl.cpp  CIRRecordLayout.cpp  CIRToCIRArgMapping.h  CMakeLists.txt  ItaniumCXXABI.cpp  LowerCall.cpp  LowerFunction.cpp  RecordLayoutBuilder.cpp
src/Driver/: CMakeLists.txt  main.cpp
src/FrontendAction/: CIRGenAction.cpp  CIROptions.h
src/Interfaces/: CIRLoopOpInterface.cpp  CIROpInterfaces.cpp
src/Lowering/DirectToLLVM/: CMakeLists.txt  LowerToLLVM.cpp
src/Lowering/ThroughMLIR/: CMakeLists.txt  LowerCIRToMLIR.cpp
src/include/: CMakeLists.txt
src/include/CIR/: ABIArgInfo.h  CIRGenerator.h  CMakeLists.txt  LoweringHelpers.h
src/include/CIR/Interfaces/: ASTAttrInterfaces.h  CIRFPTypeInterface.h  CIROpInterfaces.h
src/include/CIRFrontendAction/: CIRGenAction.h
src/include/CPPFrontend/: CIROptions.h
(+129 files in other folders)
